setup and home page

--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Sora Font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Righteous:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Teja Chundru</title>
   </head>
   <body>
     <div id="root"></div>
